# qt-template

./: CMakeLists.txt  README.md  Taskfile.yml  conanfile.py  flake.nix
cmake/: ProjectSettings.cmake
data/config/: config.json
data/ui/: main.qml
profiles/: zig011_x64
src/: CMakeLists.txt  backend.cpp  backend.h  main.cpp  types.h  version.h
